<resources>
    <string name="app_name">Assistant Reminder</string>
    <string name="login_icon">login_icon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_reminder_button">Create Reminder</string>
    <string name="logout_button">Logout</string>
    <string name="reminder">Reminder</string>
    <string name="author">Author</string>
    <string name="preference_file" translatable="false">com.ouluuni21.assistedreminder.PREFERENCE_FILE</string>
    <string name="dbFileName">com.ouluuni21.assistedreminder.dbFile</string>
    <string name="reminders">Reminders</string>
    <string name="new_reminder">New Reminder</string>
    <string name="created_by">Created by</string>
    <string name="date">Date</string>
    <string name="create">Create</string>
    <string name="register_new_account">Register New Account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="action_register">Register</string>
    <string name="action_go_back_to_login"><u>Go back to login screen</u></string>
    <string name="update">Update</string>
    <string name="edit">Edit reminder</string>
    <string name="delete">Delete reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="input_reminder_text">Input reminder message</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="detail">Actions</string>
    <string name="date_and_time">Date and time</string>
    <string name="time">Time</string>
    <string name="create_calendar">Create calendar entry</string>
    <string name="delete_alert">Do you want to delete reminder for %1$s created by &lt;b>%2$s&lt;/b>?</string>
    <string name="update_image"><u>Update image</u></string>
    <string name="speech_to_text">Speech to text</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_info">Profile Info</string>
    <string name="show_all">Show all</string>
    <string name="show_valid">Show valid</string>
    <string name="avatar">avatar</string>
    <string name="title_activity_map">Map</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="satellite_map">Satellite Map</string>

    <string name="dropped_pin">Reminder Location</string>
    <string name="location_coords">Location coords</string>
    <string name="add_map_location">Add map location</string>
    <string name="mock_location">Mock location</string>

</resources>