<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:gravity="center"
        android:text="@string/profile_name"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/txtUserHeader"
        android:layout_width="412dp"
        android:layout_height="66dp"
        android:background="#0656CF"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:text="@string/profile_info"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserHeader"
        app:layout_constraintVertical_bias="0.07"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/avatar"
        app:srcCompat="@drawable/ic_account_icon_foreground" />

    <Button
        android:id="@+id/btnMockLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMockLocCoords"
        app:layout_constraintVertical_bias="0.653" />

    <ImageView
        android:id="@+id/addMockMapLocation"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/add_map_location"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtMockLocCoords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        app:srcCompat="@drawable/ic_add_location" />

    <TextView
        android:id="@+id/txtMockLocCoords"
        android:layout_width="68dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hint="@string/location_coords"
        android:text=""
        android:textSize="8sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnMockLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMockMapLocation"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>