<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/reminderThumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/thumbnail"
        android:scaleType="centerInside"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/reminderDetail"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/detail"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_more_vert" />

    <RelativeLayout
        android:id="@+id/reminderListLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="false"
        android:layout_toStartOf="@id/reminderDetail"
        android:layout_toEndOf="@id/reminderThumbnail">

        <TextView
            android:id="@+id/txtReminderAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/created_by"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text=""
            android:textColor="#ECECEC"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtReminderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/txtReminderAuthor"
            android:hint="@string/date"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="textEnd"
            android:textColor="#ECECEC"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtReminderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtReminderAuthor"
            android:ellipsize="end"
            android:hint="@string/input_reminder_text"
            android:maxLines="3"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#ECECEC"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignStart="@+id/reminderThumbnail"
        android:layout_alignBottom="@+id/reminderThumbnail"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="-8dp"
        android:background="@color/teal_700" />

</RelativeLayout>