<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/inpEditReminderDate"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textbox_shape"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#3F51B5"
        android:textColorHint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inpEditReminderTime"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textbox_shape"
        android:hint="@string/time"
        android:importantForAutofill="no"
        android:inputType="time"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#3F51B5"
        android:textColorHint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toEndOf="@+id/inpEditReminderDate"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inpEditReminderMessage"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/textbox_shape"
        android:fadeScrollbars="false"
        android:gravity="top"
        android:hint="@string/input_reminder_text"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textMultiLine|text|textAutoComplete"
        android:isScrollContainer="false"
        android:overScrollMode="always"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:scrollbarSize="16dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="?android:attr/fastScrollPreviewBackgroundLeft"
        android:scrollbarTrackVertical="?android:attr/fastScrollThumbDrawable"
        android:scrollbars="vertical"
        android:textColor="#3F51B5"
        android:textColorHint="#00BCD4"
        android:textIsSelectable="true"
        android:textSize="14sp"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editReminderAuthor"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/reminder"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpEditReminderDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/created_by"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewReminderHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtNewReminderHeader"
        android:layout_width="412dp"
        android:layout_height="66dp"
        android:background="#0656CF"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:text="@string/edit_reminder"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/editReminderAuthor"
        android:layout_width="254dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/author"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpEditReminderMessage"
        app:layout_constraintVertical_bias="0.183" />

    <ImageView
        android:id="@+id/editThumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/thumbnail"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewReminderHeader"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/ic_label_important" />

    <TextView
        android:id="@+id/editAddThumbnail"
        android:layout_width="90dp"
        android:layout_height="16dp"
        android:gravity="center"
        android:text="@string/update_image"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editThumbnail" />

    <ImageView
        android:id="@+id/btnEditSpeech"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="#F9F8FA"
        android:contentDescription="@string/speech_to_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/inpEditReminderMessage"
        app:layout_constraintTop_toBottomOf="@+id/inpEditReminderDate"
        app:layout_constraintVertical_bias="0.177"
        app:srcCompat="@drawable/ic_mic_off" />

</androidx.constraintlayout.widget.ConstraintLayout>