<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txtRegisterHeader"
        android:layout_width="412dp"
        android:layout_height="66dp"
        android:background="#0656CF"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:text="@string/register_new_account"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_username"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterHeader"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inpRegisterUsername"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textbox_shape"
        android:hint="@string/prompt_username"
        android:importantForAutofill="no"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#3F51B5"
        android:textColorHint="#00BCD4"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_password"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpRegisterUsername"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inpRegisterPassword"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textbox_shape"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#3F51B5"
        android:textColorHint="#00BCD4"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textPassword2"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/repeat_password"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpRegisterPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inpRegisterPassword2"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textbox_shape"
        android:hint="@string/repeat_password"
        android:importantForAutofill="no"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#3F51B5"
        android:textColorHint="#00BCD4"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="@string/action_register"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpRegisterPassword2"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textGoback"
        android:layout_width="189dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/action_go_back_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.017" />

</androidx.constraintlayout.widget.ConstraintLayout>